--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		/>
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Dashboard de visualização de resultados do aplicativo Vigilantes do Sono."
 		/>
 		<link
 			rel="apple-touch-icon"
@@ -39,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
+		<title>Vigilantes do Sono</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
